welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: ';' expected but integer literal found.
	if((Math.abs(num%10))) < 3){
                                 ^